fixed charts scrollbar in frontpage

--- a/portal/css/custom.css
+++ b/portal/css/custom.css
@@ -158,7 +158,6 @@ pre {
     width: 300px;
     height: 150px;
     background-color: #ffffff;
-    overflow: auto;
     padding: 10px 10px 10px 10px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
